Fix border on Contact section mobile view.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,8 +171,14 @@ h1, h2, h3, h4, h5, h6 {
     padding-right: 15px;
 }
 
-.border-right-dots {
+.contact-border {
     border-right: dotted #000000 thin;
+}
+
+@media (max-width: 767px) {
+    .contact-border {
+        border-bottom: dotted #000000 thin;
+    }
 }
 
 .contact-link:hover {
